--- a/app/views/admin/members/_form_edit.html.erb
+++ b/app/views/admin/members/_form_edit.html.erb
@@ -55,6 +55,23 @@
         </td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>기술</strong></td>
+				<td class="last">
+          <% @member.skills.each do |skill| %>
+            <div class="skill">
+              <label>종류:</label><%= text_field_tag 'member[skill_inputs][][name]', skill[:name], :class => 'skill_name' %>
+              <label>숙련도:</label><div class="skill_slider"></div><%= text_field_tag 'member[skill_inputs][][degree]', skill[:degree], {:class=> 'skill_degree', :readonly => true}%>
+            </div>
+          <% end %>
+          <% for i in (1..5-@member.skills.length) %>
+            <div class="skill">
+              <label>종류:</label><%= text_field_tag 'member[skill_inputs][][name]', '', :class => 'skill_name' %>
+              <label>숙련도:</label><div class="skill_slider"></div><%= text_field_tag 'member[skill_inputs][][degree]', 0, {:class=> 'skill_degree', :readonly => true}%>
+            </div>
+          <% end %>
+        </td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>프로젝트</strong></td>
 				<td class="last">
           <% for project in Project.all %>
@@ -90,3 +107,18 @@
     <%= f.submit '멤버 수정' %>
   </div>
 <% end %>
+<script type="text/javascript">
+$(function(){
+  $('.skill_slider').each(function(i){
+    $(this).slider({
+      value: $('.skill_slider').eq(i).next().val(),
+      range: 'min',
+      min: 0,
+      max: 100,
+      slide: function(e, ui){
+        $(this).next().val(ui.value)
+      }
+    });
+  });
+});
+</script>
