minor fix in project screenshot inputs
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@18 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -53,14 +53,9 @@
 			<tr>
 				<td class="first" width="150"><strong>스크린샷</strong></td>
 				<td class="last">
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
-          <%= file_field_tag 'project[screenshot_files][]' %><br />
+          <% for i in (1..5) %>
+            <%= file_field_tag 'project[screenshot_files][]' %><br />
+          <% end %>
         </td>
 			</tr>
 		</table>
