closes #286 completed contact managing
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@19 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,1 +1,2 @@
-admin page
+<h2>와플스튜디오 홈페이지 관리자 페이지입니다.</h2>
+<h3><%= link_to raw("읽지 않은 문의 <strong>#{ @unread_contacts_cnt}</strong>건(click)"), admin_contacts_path %></h3>
