--- a/app/views/admin/projects/index.html
+++ b/app/views/admin/projects/index.html
@@ -1,5 +1,6 @@
 <% content_for(:title){"프로젝트 관리"} %>
 <p><%= flash[:notice] %></p>
+<p><%= flash[:error] %></p>
 <%= link_to image_tag('admin/add-icon.gif')+"새 프로젝트", new_admin_project_path %>
 <div class="table">
 	<img src="/images/admin/bg-th-left.gif" width="8" height="7" alt="" class="left" />
