--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -31,6 +31,7 @@
         <% if session[:admin] %>
 				<li><%= link_to '멤버 관리', admin_members_path %></li>
 				<li><%= link_to '프로젝트 관리', admin_projects_path %></li>
+				<li><%= link_to '문의 관리', admin_contacts_path %></li>
         <% else %>
 				<li>로그인 해 주세요.</li>
         <% end %>
