--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -269,6 +269,19 @@ table.listing td {
 	color:#000;
 	padding:3px 5px;
 	}
+table.listing tr.contact td:first-child {
+  cursor: pointer;
+}
+table.listing tr.unread td {
+  background: #fff;
+}
+table.listing tr.contact_content {
+  display: none;
+}
+table.listing tr.contact_content td {
+  text-align: left;
+  padding: 1em;
+}
 table.listing .bg td {
 	background:#ECECEC;
 	}
