closes #288 carousel management complete
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@20 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -1,7 +1,7 @@
 <h2>로그인 해 주세요.</h2>
 <p><%= flash[:notice] %></p>
 <p><%= flash[:error] %></p>
-<% form_tag '/admin/authorize' do %>
+<%= form_tag '/admin/authorize' do %>
   <%= text_field_tag 'id' %>
   <%= password_field_tag 'password' %>
   <%= submit_tag 'login' %>
