--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -29,6 +29,7 @@
 			<h3>메뉴</h3>
 			<ul class="nav">
         <% if session[:admin] %>
+				<li><%= link_to 'Carousel 관리', admin_carousels_path %></li>
 				<li><%= link_to '멤버 관리', admin_members_path %></li>
 				<li><%= link_to '프로젝트 관리', admin_projects_path %></li>
 				<li><%= link_to '문의 관리', admin_contacts_path %></li>
