rails version change deprecated method fix
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@22 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/waffle_mailer/contact_to_waffle.text.erb
+++ b/app/views/waffle_mailer/contact_to_waffle.text.erb
@@ -1,4 +1,4 @@
-이 메일은 와플스튜디오 홈페이지에 들어온 문의를 자동으로 발송한 것입니다.
+이 메일은 와플스튜디오 홈페이지를 통해 들어온 문의를 자동으로 발송한 것입니다.
 
 문의자 이름 : <%= @contact.name %>
 문의자 이메일 : <%= @contact.email %>
