--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @contact, :url => contacts_path, :html => { :method => 'POST'} do |f| %>
   <%= f.text_field :name %>
-  <%= f.text_field :email %>
-  <%= f.text_field :phone %>
+  <%= f.email_field :email %>
+  <%= f.phone_field :phone %>
   <%= f.text_area :message %>
   <%= f.submit 'ok' %>
 <% end %>
