--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -1,2 +1,14 @@
-<header><h2>Contact</h2></header>
+<header>
+  <h1>Contact</h1>
+</header>
+<nav class="navigation">
+  <ul>
+    <li><a>About Us</a></li>
+    <li><a>Members</a></li>
+    <li><a>Projects</a></li>
+    <li><a>Contact</a></li>
+  </ul>
+</nav>
+<article>
 <%= render :partial => 'contacts/form' %>
+</article>
