--- a/app/views/members/_list.html.erb
+++ b/app/views/members/_list.html.erb
@@ -1,1 +1,14 @@
-<header><h2>Members</h2></header>
+<header>
+  <h1>Members</h1>
+</header>
+<nav class="navigation">
+  <ul>
+    <li><a>About Us</a></li>
+    <li><a>Members</a></li>
+    <li><a>Projects</a></li>
+    <li><a>Contact</a></li>
+  </ul>
+</nav>
+<article>
+
+</article>
