--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,8 @@
 }
 section {
   height: 600px;
+  margin-top: 100px;
+  margin-bottom: 100px;
   position: relative;
 }
 nav.navigation {
@@ -22,6 +24,9 @@ nav.navigation li a {
   letter-spacing: -2px;
   line-height: 1.3em;
 }
+section article {
+  margin-left: 260px;
+}
 
 #new_contact {
   width: 565px;
@@ -30,6 +35,7 @@ form label {
   display: block;
   line-height: 2em;
   margin: 0.2em 0 0 0.5em;
+  letter-spacing: -1px;
 }
 form div.text_fields {
   float: left;
@@ -42,11 +48,21 @@ form .text_input_wrapper {
   height: 30px;
   font-size: 18px;
   background: #ccc;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
+form .text_area_wrapper {
+  width: 265px;
+  background: #ccc;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
 }
 form .text_input_wrapper .text_input {
   width: 96%;
-  height: 26px;
-  margin-top: 2px;
+  height: 20px;
+  margin-top: 5px;
   padding: 0;
   border: 0;
   margin-left: 2%;
@@ -54,7 +70,10 @@ form .text_input_wrapper .text_input {
   font-size: 15px;
 }
 form textarea {
-  width: 265px;
+  width: 96%;
+  height: 95px;
+  margin: 5px 2%;
+  background: transparent;
   height: 95px;
   background: #ccc;
   border: 0;
