--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -1,14 +1,7 @@
 <header>
   <h1>Contact</h1>
 </header>
-<nav class="navigation">
-  <ul>
-    <li><a>About Us</a></li>
-    <li><a>Members</a></li>
-    <li><a>Projects</a></li>
-    <li><a>Contact</a></li>
-  </ul>
-</nav>
+<%= render :partial => 'layouts/navigation' %>
 <article>
 <%= render :partial => 'contacts/form' %>
 </article>
