--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -2,14 +2,7 @@
   <h1>Wafflestudio</h1>
   <h2>We design develop delicious WEB</h2>
 </header>
-<nav class="navigation">
-  <ul>
-    <li><a>About Us</a></li>
-    <li><a>Members</a></li>
-    <li><a>Projects</a></li>
-    <li><a>Contact</a></li>
-  </ul>
-</nav>
+<%= render :partial => 'layouts/navigation' %>
 <article>
   <div id="tweetbox">
 
