remove unnecessary controllers, and added timeline model&controller
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@30 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -2,7 +2,9 @@
 <p><%= flash[:notice] %></p>
 <p><%= flash[:error] %></p>
 <%= form_tag '/admin/authorize' do %>
-  <%= text_field_tag 'id' %>
-  <%= password_field_tag 'password' %>
+  <%= label_tag 'id', '아이디: ' %>
+  <%= text_field_tag 'id', '', {:placeholder => 'id', :tabindex => 1} %><br />
+  <%= label_tag 'password', '비밀번호: ' %>
+  <%= password_field_tag 'password', '', {:placeholder => 'password', :tabindex => 2} %>
   <%= submit_tag 'login' %>
 <% end %>
