change view files' name
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@31 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
       <%= render :partial => 'layouts/about_us' %>
     </section>
     <section id="members">
-      <%= render :partial => 'members/list' %>
+      <%= render :partial => 'layouts/member_list' %>
     </section>
     <section id="projects">
-      <%= render :partial => 'projects/list' %>
+      <%= render :partial => 'layouts/project_list' %>
     </section>
     <section id="contact">
       <%= render :partial => 'layouts/contact' %>
