working on timeline view
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@33 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/_about_us.html.erb
+++ b/app/views/layouts/_about_us.html.erb
@@ -4,4 +4,15 @@
 <%= render :partial => 'layouts/navigation', :locals => {:cur => 'about_us'} %>
 <article>
 
+  <div id="timeline">
+    <ul>
+    <% start_date = Date.new(2007)
+       end_date = Date.new(2011) %>
+    <% @timelines.each do |timeline| %>
+      <li>
+        <a title="<%= timeline.name %>" data-percent="<%= (timeline.took_place_at - start_date)/(end_date - start_date).to_f %>">●</a>
+      </li>
+    <% end %>
+    </ul>
+  </div>
 </article>
