--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <![endif]-->
   <%= stylesheet_link_tag ['reset', 'style'] %>
   <%= javascript_include_tag :jquery %>
-  <%= javascript_include_tag ['jquery.form', 'application'] %>
+  <%= javascript_include_tag ['jquery.form', 'jquery.qtip', 'application'] %>
   <%= csrf_meta_tag %>
 </head>
 <body>
