--- a/app/views/layouts/_about_us.html.erb
+++ b/app/views/layouts/_about_us.html.erb
@@ -9,9 +9,7 @@
     <% start_date = Date.new(2007)
        end_date = Date.new(2011) %>
     <% @timelines.each do |timeline| %>
-      <li>
-        <a title="<%= timeline.name %>" data-percent="<%= (timeline.took_place_at - start_date)/(end_date - start_date).to_f %>">●</a>
-      </li>
+      <li title="<%= "#{timeline.name}(#{timeline.took_place_at.strftime("%m/%d")})" %>" data-percent="<%= (timeline.took_place_at - start_date)/(end_date - start_date).to_f %>"></li>
     <% end %>
     </ul>
   </div>
