--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
   <!--[if IE]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <%= stylesheet_link_tag ['reset', 'style'] %>
+  <%= stylesheet_link_tag ['reset', 'style', 'tipsy'] %>
   <%= javascript_include_tag :jquery %>
-  <%= javascript_include_tag ['jquery.form', 'jquery.qtip', 'application'] %>
+  <%= javascript_include_tag ['jquery.form', 'jquery.tipsy', 'application'] %>
   <%= csrf_meta_tag %>
 </head>
 <body>
