started tweet box
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@35 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -4,9 +4,9 @@
 </header>
 <%= render :partial => 'layouts/navigation' %>
 <article>
-  <div id="tweetbox">
+  <ul id="tweetbox">
 
-  </div>
+  </ul>
   <div id="carousel">
 
   </div>
