--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -4,9 +4,12 @@
 </header>
 <%= render :partial => 'layouts/navigation' %>
 <article>
-  <ul id="tweetbox">
-
-  </ul>
+  <div id="tweetbox">
+    <h2><a href="http://twitter.com/wafflestudio" title="Wafflestudio">@wafflestudio</a>'s Latest Tweets</h2>
+    <ul id="tweets">
+      <li>Loading Tweets...</li>
+    </ul>
+  </div>
   <div id="carousel">
 
   </div>
