--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
     <%= label_tag 'contact_phone', 'Phone :' %>
     <div class="text_input_wrapper">
-      <%= f.phone_field :phone, {:placeholder => '010-1234-5678', :class => 'text_input', :title => '빠른 답변이 필요하시면<br />전화번호를 남겨주시기 바랍니다.<br />(선택사항)'} %>
+      <%= f.phone_field :phone, {:placeholder => '010-1234-5678', :class => 'text_input', :title => '빠른 답변이 필요하시면<br />전화번호를 남겨주시기 바랍니다.'} %>
     </div>
   </div>
   <div class="text_area">
