--- a/app/views/layouts/_tweet_template.html.erb
+++ b/app/views/layouts/_tweet_template.html.erb
@@ -3,6 +3,6 @@
     <p class="tweet_text">
       {{html text}}
     </p>
-    <time>${ time }</time>
+    <span class="time">${ time }</span>
   </li>
 </script>
