--- a/app/views/layouts/_member_list.html.erb
+++ b/app/views/layouts/_member_list.html.erb
@@ -3,5 +3,22 @@
 </header>
 <%= render :partial => 'layouts/navigation' %>
 <article>
-
+  <ul id="member_tags">
+  <% Member.available_tags.each do |tag| %>
+    <li style="background: <%= Member.tag_color[tag] %>;"><%= tag %></li>
+  <% end %>
+  </ul>
+  <ul id="member_list">
+  <% @members.each do |member| %>
+    <li class="member" data-tags="<%= member.tags.join(',') %>">
+      <%= image_tag member.list1.url(:thumb), :class => 'member_thumb' %>
+      <span class="member_name"><%= member.name %></span>
+      <div class="member_tagbars">
+      <% for tag in member.tags %>
+        <span class="member_tagbar" style="background: <%= Member.tag_color[tag] %>;"></span>
+      <% end %>
+      </div>
+    </li>
+  <% end %>
+  </ul>
 </article>
