--- a/app/views/layouts/_member_list.html.erb
+++ b/app/views/layouts/_member_list.html.erb
@@ -10,12 +10,12 @@
   </ul>
   <ul id="member_list">
   <% @members.each do |member| %>
-    <li class="member" data-tags="<%= member.tags.join(',') %>">
+    <li id="member_<%= member.id %>"class="member" data-tags="<%= member.tags.join(',') %>">
       <%= image_tag member.list1.url(:thumb), :class => 'member_thumb' %>
-      <span class="member_name"><%= member.name %></span>
-      <div class="member_tagbars">
+      <span class="name"><%= member.name %></span>
+      <div class="tagbars">
       <% for tag in member.tags %>
-        <span class="member_tagbar" style="background: <%= Member.tag_color[tag] %>;"></span>
+        <span class="tagbar" style="background: <%= Member.tag_color[tag] %>;"></span>
       <% end %>
       </div>
     </li>
