--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,12 @@
   <!--[if IE]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <%= stylesheet_link_tag ['reset', 'style', 'tipsy', 'nivo-slider'] %>
+  <%= stylesheet_link_tag ['reset', 'style', 'tipsy', 'nivo-slider', 'colorbox'] %>
   <%= javascript_include_tag :jquery %>
-  <%= javascript_include_tag ['jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'application'] %>
+  <%= javascript_include_tag ['jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'application'] %>
   <%= csrf_meta_tag %>
   <%= render :partial => 'layouts/tweet_template' %>
+  <%= render :partial => 'layouts/member_template' %>
 </head>
 <body>
   <div id="container">
@@ -29,5 +30,6 @@
       <%= render :partial => 'layouts/contact' %>
     </section>
   </div>
+  <div id="invisible" style="display:none;"></div>
 </body>
 </html>
