member navigation with keyboard
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@42 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/_member_template.html.erb
+++ b/app/views/layouts/_member_template.html.erb
@@ -25,9 +25,9 @@
         </dd>
       </dl>
     </div>
-    <nav>
+    <div class="nav">
       <div class="prev"></div>
       <div class="next"></div>
-    </nav>
+    </div>
   </div>
 </script>
