--- a/app/views/admin/members/_form_edit.html.erb
+++ b/app/views/admin/members/_form_edit.html.erb
@@ -30,6 +30,10 @@
 				<td class="last"><%= f.text_field 'name_eng' %></td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>등급</strong></td>
+				<td class="last"><%= f.select :grade, ['cream', 'choco', 'jam'], {:selected => @member.grade} %></td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>이메일</strong></td>
 				<td class="last"><%= f.text_field 'email' %></td>
 			</tr>
