--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -239,6 +239,7 @@ a.nivo-prevNav {
   height: 500px;
   letter-spacing: -1px;
   color: #222;
+  background: white;
 }
 .member_popup a {
   text-decoration: none;
@@ -248,9 +249,14 @@ a.nivo-prevNav {
   width: 230px;
   height: 480px;
   margin-top: 10px;
+  position: relative;
   margin-left: 30px;
   float: left;
-  text-align: center;
+}
+.member_popup .profile img {
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 .member_popup .text_content {
   margin-left: 280px;
@@ -287,7 +293,7 @@ a.nivo-prevNav {
 }
 .member_popup .skills li {
   width: 302px;
-  height: 13px;
+  height: 15px;
   line-height: 13px;
   position: relative;
   margin: 8px 0px;
@@ -303,15 +309,17 @@ a.nivo-prevNav {
   left: 5px;
   z-index: 2;
   color: #fff;
+  padding-top: 2px;
+  line-height: 11px;
 }
 .member_popup .skill_bar {
   width: 0px;
-  height: 11px;
-  line-height: 11px;
-  margin-top: 1px;
+  height: 13px;
   position: absolute;
   left: 1px;
+  margin-top: 1px;
   z-index: 1;
+  line-height: 13px;
   background: #7a3857;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
