--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <%= csrf_meta_tag %>
   <%= render :partial => 'layouts/tweet_template' %>
   <%= render :partial => 'layouts/member_template' %>
+  <%= render :partial => 'layouts/project_template' %>
 </head>
 <body>
   <div id="container">
