--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,8 @@
     <section id="contact">
       <%= render :partial => 'layouts/contact' %>
     </section>
+    <footer>
+    </footer>
   </div>
   <div id="invisible" style="display:none;"></div>
 </body>
