--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@
 body{
   font-family: 나눔고딕, NanumGothic, 돋움, dotum;
   font-size: 12px;
+  background: #B2B2B2;
 }
 /*overall style end*/
 
@@ -10,13 +11,12 @@ body{
 #container {
   width: 800px;
   margin: 0px auto;
-  border: 1px solid #ddd;
-
+  margin-top: 100px;
+  background: url(/images/section_bg.gif) no-repeat;
 }
 section {
   height: 600px;
   position: relative;
-  margin-top: 100px;
   margin-bottom: 100px;
 }
 section article {
@@ -46,7 +46,6 @@ nav.navigation li a {
 
 /*home section start*/
 #home {
-  background: #bbcad2;
 }
 /*home section start*/
 
@@ -159,7 +158,7 @@ a.nivo-prevNav {
   position: absolute;
   top: -3px;
   display: block;
-  background: red;
+  background: white;
   cursor: pointer;
   line-height: 0px;
   font-size: 0px;
@@ -169,6 +168,8 @@ a.nivo-prevNav {
 
 
 /*members start*/
+#members {
+}
 #member_tags {
   position: absolute;
   left: 50px;
@@ -384,6 +385,11 @@ a.nivo-prevNav {
 
 
 /*project start*/
+#projects {
+}
+.project {
+  float: left;
+}
 .project_popup {
   width: 850px;
   height: 550px;
@@ -549,3 +555,8 @@ form textarea {
   display: block;
 }
 /*contact form end*/
+footer {
+  margin-top: -8px;
+  height: 425px;
+  background: url(/images/footer.png) no-repeat;
+}
